# Multimodel-Reasoning

./: .dockerignore  .env.example  .gitignore  BENCHMARK_LOG.md  DECISIONS.md  DEPLOYMENT.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  transcript_output.txt
.github/workflows/: ci.yml  docker.yml
AI/: datamodels.py  prompts.py
AI/notebooks/: archi_testing.ipynb
agents/: __init__.py  _extract.py  _provider.py  _retry.py  _runtime.py  _settings.py  _stub.py  _usage.py  _window_slice.py  audio_agent.py  judge_agent.py  narrative_editor.py  orchestrator.py  pattern_weaver.py  profiler_agent.py  prompts.py  schemas.py  visual_agent.py  vocab_agent.py  window_analyst.py  windows.py
backend/: __init__.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  health.py  jobs.py  reports.py
backend/app/services/: __init__.py  job_runner.py  key_validation.py  storage.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: .eslintrc.cjs  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  jobs.ts
frontend/src/components/: Badges.tsx  CrossModalSegment.tsx  FinalConclusion.tsx  HighlightCard.tsx  PatternRow.tsx  PatternTypeBadge.tsx  RecentAnalyses.tsx  SignificancePill.tsx  StageChecklist.tsx  ThreadCard.tsx  ToneBadge.tsx  WindowNote.tsx
frontend/src/lib/: stages.ts  storage.ts  time.ts
frontend/src/screens/: AnalyzingScreen.tsx  IntroScreen.tsx  ReportScreen.tsx  UploadScreen.tsx
frontend/src/types/: api.ts
frontend/tests/: AnalyzingScreen.test.tsx  ReportScreen.test.tsx  UploadScreen.test.tsx  analyzing-screen.test.tsx  report-screen.test.tsx  setup.ts  test-utils.tsx  upload-screen.test.tsx
legacy_notebooks/: README.md  data_ana_merge.ipynb  feature_engineering.ipynb  testing.ipynb  testing_final_dataframe.ipynb
legacy_notebooks/_plotting/: plot_landmarks.py
legacy_notebooks/notebooks/old_notebooks/: audio_testing.ipynb  master_df_ana.ipynb  verify_checking_pipelines.ipynb
legacy_notebooks/utils/: plot_graphs.py  utils.py
notebooks/: anomaly_detection_testing.ipynb  audio_testing.ipynb  data_ana_merge.ipynb  extra.ipynb  feature_engineering.ipynb  master_df_ana.ipynb  parallel_processing.ipynb  testing.ipynb  testing_final_dataframe.ipynb  verify_checking_pipelines.ipynb
pipeline/: __init__.py  _logging.py  merge.py  orchestrator.py  schemas.py  utils.py
pipeline/anomaly/: __init__.py  ranges.py  rrcf.py  smoothing.py
pipeline/audio/: __init__.py  extract.py  technical.py  transcribe_assemblyai.py  transcribe_whisper.py
pipeline/features/: __init__.py  linguistic.py  smoothing.py  transforms.py
pipeline/io/: __init__.py  parquet.py  paths.py
pipeline/video/: __init__.py  face_features.py  frame_extractor.py
scripts/: smoke_test_groq.py
src/audio/: audio_loader.py  technical_data.py  utterances_data.py  whisper_data.py  whisperx_test.py
src/sync/: Feature_Transformation.py  RRCF_TS_anomaly_detection.py
src/utils/: datamodels.py  plot_graphs.py  plot_landmarks.py  save_data.py
src/video/: face_detector.py  face_features_ts_data.py  frame_extractor.py
tests/: conftest.py
tests/agents/: test_agent_schemas.py  test_orchestrator_with_mock_llm.py  test_orchestrator_with_stub.py  test_windows.py
tests/api/: conftest.py  test_health.py  test_jobs_endpoints.py
tests/fixtures/: _generate_tiny_master_df.py  generate.py  meta.json  sample_anomaly_dicts.json  tiny_master_df.parquet  tiny_master_df.parquet.schema.json  tiny_transcript.parquet  tiny_transcript.parquet.schema.json
tests/unit/: test_anomaly.py  test_detect_interviewee.py  test_feature_engineering.py  test_features.py  test_orchestrator_pieces.py  test_parquet_io.py  test_paths.py  test_rrcf_internals.py  test_schemas.py  test_smoke.py
