[project]
name = "mmr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.48.1",
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "whisper-timestamped>=1.15.9",
]
