[project]
name = "mmr"
version = "0.1.0"
description = "MMR — Multimodal interview behavioural analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.48.1",
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "logfire>=4.16.0",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pydantic-ai>=1.39.0",
    "pydantic-settings>=2.5.0",
    "pysad>=0.3.4",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "rrcf>=0.4.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.22",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.32.0",
    "whisper-timestamped>=1.15.9",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

# ---- ruff -----------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "legacy_notebooks",
    "data",
    "models",
    ".venv",
    "frontend",
]

[tool.ruff.lint]
# Conservative ruleset for M1. Tightened in later milestones as code stabilises.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # comprehensions
    "SIM",  # simplifications
    "A",    # builtin shadowing
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # FastAPI dependency-injection pattern uses function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy -----------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
files = ["backend/app", "pipeline", "agents"]
ignore_missing_imports = true
follow_imports = "silent"
# Permissive for M1 — tightened as code matures.
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["legacy_notebooks.*"]
ignore_errors = true

# ---- pytest ---------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

# ---- coverage -------------------------------------------------------------

[tool.coverage.run]
source = ["pipeline", "agents", "backend/app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
